build: Removed fork options