@@ -13,10 +13,6 @@ dependencies {
 
 asciidoctor {
     configurations 'asciidoctorExtensions'
-    forkOptions {
-      // Fix issue with JDK16+
-      jvmArgs("--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED")
-    }
     attributes = [
         numbered                : false,
         'source-highlighter'    : 'coderay',
